# imdb

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: bench_top250.rs
examples/: top250movies.rs
src/: consts.rs  error.rs  imdb.rs  language.rs  lib.rs  models.rs
src/parser/: mod.rs  top250.rs
