[package]
authors = ["Vivek Kushwaha <yoursvivek@gmail.com>"]
license = "MIT"
name = "imdb"
version = "0.0.1"
description = "imdb is a library to retrieve information from IMDb"
homepage = "https://github.com/yoursvivek/imdb"
repository = "https://github.com/yoursvivek/imdb"
readme = "README.md"
keywords = ["imdb", "scraping", "movies"]
edition = "2018"

[dependencies]
derive_builder = "0.9.0"
futures = "0.3.6"
hyper = "0.13.8"
language-tags = "0.2.2"
log = "0.4.11"
reqwest = "0.10.8"
scraper = "0.12.0"
url = "2.1.1"

[dependencies.serde]
optional = true
version = "1.0"

[dependencies.serde_derive]
optional = true
version = "1.0"

[dev-dependencies]
colored = "2.0.0"
env_logger = "0.7.1"
glob = "0.3.0"
terminal_size = "0.1.13"

[features]
serde-impls = [
    "serde_derive",
    "serde",
]
