[package]
authors = ["Vivek Kushwaha <yoursvivek@gmail.com>"]
license = "MIT"
name = "imdb"
version = "0.0.1"
description = "imdb is a library to retrieve information from IMDb"
homepage = "https://github.com/yoursvivek/imdb"
repository = "https://github.com/yoursvivek/imdb"
readme = "README.md"
keywords = ["imdb", "scraping", "movies"]
edition = "2018"

[dependencies]
derive_builder = "0.11.2"
futures = "0.3.21"
hyper = "0.14.19"
log = "0.4.17"
reqwest = "0.11.11"
scraper = "0.13.0"
url = "2.2.2"

[dependencies.serde]
optional = true
version = "1.0"

[dependencies.serde_derive]
optional = true
version = "1.0"

[dev-dependencies]
colored = "2.0.0"
env_logger = "0.7.1"
glob = "0.3.0"
terminal_size = "0.1.17"

[features]
serde-impls = [
    "serde_derive",
    "serde",
]
